src/kubernetes/perian/manifests/unifi/service.yml
apiVersion: v1
kind: Service
metadata:
  name: unifi-service
  namespace: perian-unifi
spec:
  selector:
    app: unifi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8443
  type: ClusterIP
